Added Asp.Net Identity, Bearer token authentication

--- a/Argo.Shop.WebApi/appsettings.Development.json
+++ b/Argo.Shop.WebApi/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "JwtBearerToken": {
+        "Issuer": "Argo.Shop.WebApi",
+        "Audience": "Argo.Shop.WebApi",
+        "SecretKey": "MyDevSecret-6F50D67A-55E2-4721-BB4D-88040B46221D",
+        "ExpiryTimeInSeconds": 300
     }
-  }
 }
