--- a/Argo.Shop.WebApi/appsettings.json
+++ b/Argo.Shop.WebApi/appsettings.json
@@ -8,5 +8,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "JwtBearerToken": {
+        "Issuer": "Argo.Shop.WebApi",
+        "Audience": "Argo.Shop.WebApi",
+        "SecretKey": "MySecret-E371E7FE-590C-42AD-8CBB-1177A5E3DAFE",
+        "ExpiryTimeInSeconds": 300
+    },
     "AllowedHosts": "*"
 }
