--- a/Argo.Shop.Application/Argo.Shop.Application.csproj
+++ b/Argo.Shop.Application/Argo.Shop.Application.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Argo.Shop.Domain\Argo.Shop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Exceptions\" />
+  </ItemGroup>
+
 </Project>
