--- a/Argo.Shop.IntegrationTests/Argo.Shop.IntegrationTests.csproj
+++ b/Argo.Shop.IntegrationTests/Argo.Shop.IntegrationTests.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
-    <IsPackable>false</IsPackable>
+	<IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Argo.Shop.Application\Argo.Shop.Application.csproj" />
     <ProjectReference Include="..\Argo.Shop.Infrastructure\Argo.Shop.Infrastructure.csproj" />
+    <ProjectReference Include="..\Argo.Shop.WebApi\Argo.Shop.WebApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
