--- a/Argo.Shop.IntegrationTests/Argo.Shop.IntegrationTests.csproj
+++ b/Argo.Shop.IntegrationTests/Argo.Shop.IntegrationTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Divergic.Logging.Xunit" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
